fixed animation overlapping

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -66,8 +66,9 @@ header {
    nav {
       width: 99%;
       position: absolute;
-      top: 5rem;
+      top: 6rem;
       background-color: $white;
+      z-index: 1;
       // @media (max-width: 620px) {
          //    display: none;
    }
@@ -82,10 +83,10 @@ header {
       content: '';
       width: 0;
       height: 0;
-      top: -.9rem;
+      top: -1.1rem;
       right: 0;
-      border: 1rem solid transparent;
-      border-right: 1rem solid $white;
+      border: 1.2rem solid transparent;
+      border-right: 1.2rem solid $white;
       // background-color: $white;
       // transform: rotate(45deg) translateX(50%);
    }
